# py-dashboard

./: config.py  pyproject.toml
web/: __init__.py  routes.py
